--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "watch": "node --env-file=.env --watch app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
   }
